--- a/style.css
+++ b/style.css
@@ -1,9 +1,12 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 #canvas_1 {
-    border: 5px solid black;
+    background: black;
     position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-    width: 600px;
-    height: 600px;
+    top: 0;
+    left: 0;
 }
