--- a/draw.css
+++ b/draw.css
@@ -6,8 +6,13 @@
 
 #canvas_2{
     /* border: 10px solid black; */
+    /* background: black; */
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%,-50%);
+}
+
+#bgimg {
+    display: none;
 }
