--- a/draw.css
+++ b/draw.css
@@ -6,7 +6,7 @@
 
 #canvas_2{
     /* border: 10px solid black; */
-    /* background: black; */
+    background: black;
     position: absolute;
     top: 50%;
     left: 50%;
